# raft-grpc

./: README.md  tasklist.md
grpc/: Cargo.toml  gen-rs.sh
grpc_raft/: Cargo.toml  Dockerfile  docker-compose.yml  gen-rs.sh  raftmessaging.proto  shutdown.sh
grpc_raft/src/: lib.rs  raftmessaging.rs  raftmessaging_grpc.rs
raft/: Cargo.toml
raft/src/: lib.rs  term.rs
src/: lib.rs  term.rs
