[package]
name = "grpc_raft"
version = "0.1.0"
authors = ["Kateryna Nezdolii <nezdolik@spotify.com>"]

[dependencies]
grpc-rust = "0.1.0"
futures         = "0.*"
futures-cpupool = "0.1.*"
protobuf        = "1.*"
grpc            = "0.2.1"
tls-api         = "0.*"
httpbis         = "0.4.1"
structopt       = "0.2.4"
scheduled-executor = "0.4.0"